syntax = "proto3";
option csharp_namespace = "GrpcSandbox.Protos";

package order;

import "Protos/item.proto";
import "Protos/customer.proto";

// Order message definition
message Order {
  string order_id = 1;
  customer.Customer customer = 2;
  item.Item items = 3;
  string status = 4;
  string created_at = 5;
}

// Request message for creating an order
message CreateOrderRequest {
  Order order = 1;  // The order to be created
}

// Response message for creating an order
message CreateOrderResponse {
  string order_id = 1;  // The ID of the created order
}

// Request message for getting an order by ID
message GetOrderRequest {
  string order_id = 1;  // The ID of the order to retrieve
}

// Response message for getting an order
message GetOrderResponse {
  Order order = 1;  // The requested order
}

// Request message for updating an order
message UpdateOrderRequest {
  Order order = 1;  // The order to update (must contain updated fields)
}

// Response message for updating an order
message UpdateOrderResponse {
  Order order = 1;  // The updated order
}

// Request message for deleting an order
message DeleteOrderRequest {
  string order_id = 1;  // The ID of the order to delete
}

// Response message for deleting an order
message DeleteOrderResponse {
  bool success = 1;  // Whether the deletion was successful
}

// Order service with CRUD operations
service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // Get an order by ID
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  // Update an existing order
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);

  // Delete an order by ID
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
